[package]
name = "sag"
version = "0.1.0"
edition = "2024"
description = "Simple API Gateway"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
clap = { version = "4.5.38", features = ["derive"] }
config = "0.15.11"
once_cell = "1.21.3"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
